--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ before_install:
 python:
   - "2.7"
 install:
-  - apt-get install git autoconf libtool libcurl4-openssl-dev libncurses5-dev pkg-config yasm make
+  - sudo apt-get install git autoconf libtool libcurl4-openssl-dev libncurses5-dev pkg-config yasm make
   - git clone git://github.com/ckolivas/cgminer.git
   - cd cgminer/
   - ./autogen.sh --disable-opencl --disable-adl --enable-cpumining
