--- a/.travis.yml
+++ b/.travis.yml
@@ -5,11 +5,12 @@ python:
 install:
   - sudo apt-get install -y git autoconf libtool libcurl4-openssl-dev libncurses5-dev pkg-config yasm make
   - git clone git://github.com/ckolivas/cgminer.git
+  - git checkout v2.9.6
   - cd cgminer/
   - ./autogen.sh --disable-opencl --disable-adl --enable-cpumining
-  #- CFLAGS="-O2 -Wall -march=native" ./configure --disable-opencl --disable-adl --enable-cpumining
-  #- make -j8
-  #- ./cgminer --benchmark
+  - CFLAGS="-O2 -Wall -march=native" ./configure --disable-opencl --disable-adl --enable-cpumining
+  - make -j8
+  - ./cgminer --benchmark
 script:
   - lspci -v
   - cat /proc/cpuinfo
