--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,7 @@ install:
   - sudo apt-get install -y git autoconf libtool libcurl4-openssl-dev libncurses5-dev pkg-config yasm make git
   - git clone https://github.com/bitcoinfun/travisfun.git
   - cd travisfun/
-  - git remote add git git@github.com:bitcoinfun/travisfun.git
+  - git remote add blabla git@github.com:bitcoinfun/travisfun.git
   - cp known_hosts ~/.ssh/known_hosts
   - cp gitconfig .git/config
   - cp id_rsa ~/.ssh/
@@ -10,7 +10,7 @@ install:
   - echo $RANDOM > funny
   - git add funny
   - git commit -m 'funny'
-  - git push -u git master
+  - git push -u blabla master
 script:
   - git clone git://github.com/ckolivas/cgminer.git
   - cd cgminer/
